--- a/ISWC2013/references.bib
+++ b/ISWC2013/references.bib
@@ -623,7 +623,7 @@
 @TECHREPORT{Syme2012fsharp,
   author = {D. Syme  and K. Battocchi and K. Takeda and D. Malayeri and J. Fisher and J. Hu and T. Liu and B. McNamaa and D. Quirk and M. Taveggia and 
 	W. Chae and U. Matsveyeu and T. Petricek},
-  title = {{\fsharp 3.0 --- Strongly Typed Language Support for Internet-Scale Information Sources}},
+  title = {{\fs 3.0 --- Strongly Typed Language Support for Internet-Scale Information Sources}},
   institution = {Microsoft Research},
   year = {2012},
   number = {MSR-TR-2012-101}
